Add Instagram feed images to gallery section
Co-authored-by: Ona <no-reply@ona.com>

--- a/index.html
+++ b/index.html
@@ -217,34 +217,22 @@
             
             <div class="gallery-grid">
                 <div class="gallery-item">
-                    <div class="gallery-placeholder">
-                        <span>Foto 1</span>
-                    </div>
+                    <img src="feed/475846529_122109147314724665_3106343073095388622_n..jpg" alt="Milkbelly Instagram">
                 </div>
                 <div class="gallery-item">
-                    <div class="gallery-placeholder">
-                        <span>Foto 2</span>
-                    </div>
+                    <img src="feed/475854743_122109149438724665_3463077709337101585_n..jpg" alt="Milkbelly Instagram">
                 </div>
                 <div class="gallery-item">
-                    <div class="gallery-placeholder">
-                        <span>Foto 3</span>
-                    </div>
+                    <img src="feed/476119379_122109150566724665_8769602637004794637_n..jpg" alt="Milkbelly Instagram">
                 </div>
                 <div class="gallery-item">
-                    <div class="gallery-placeholder">
-                        <span>Foto 4</span>
-                    </div>
+                    <img src="feed/519877814_17966771156928136_6517244355155860494_n..jpg" alt="Milkbelly Instagram">
                 </div>
                 <div class="gallery-item">
-                    <div class="gallery-placeholder">
-                        <span>Foto 5</span>
-                    </div>
+                    <img src="feed/582854796_17979734162928136_8231244067935070203_n..jpg" alt="Milkbelly Instagram">
                 </div>
                 <div class="gallery-item">
-                    <div class="gallery-placeholder">
-                        <span>Foto 6</span>
-                    </div>
+                    <img src="feed/626078724_17987904023928136_6526325265770516619_n..jpg" alt="Milkbelly Instagram">
                 </div>
             </div>
             
