--- a/index.html
+++ b/index.html
@@ -222,24 +222,28 @@
                 <p class="section-description">Acompanhe nossos momentos deliciosos no Instagram</p>
             </div>
             
-            <div class="gallery-grid">
-                <div class="gallery-item">
-                    <img src="feed/475846529_122109147314724665_3106343073095388622_n..jpg" alt="Milkbelly Instagram">
-                </div>
-                <div class="gallery-item">
-                    <img src="feed/475854743_122109149438724665_3463077709337101585_n..jpg" alt="Milkbelly Instagram">
-                </div>
-                <div class="gallery-item">
-                    <img src="feed/476119379_122109150566724665_8769602637004794637_n..jpg" alt="Milkbelly Instagram">
-                </div>
-                <div class="gallery-item">
-                    <img src="feed/519877814_17966771156928136_6517244355155860494_n..jpg" alt="Milkbelly Instagram">
-                </div>
-                <div class="gallery-item">
-                    <img src="feed/582854796_17979734162928136_8231244067935070203_n..jpg" alt="Milkbelly Instagram">
-                </div>
-                <div class="gallery-item">
-                    <img src="feed/626078724_17987904023928136_6526325265770516619_n..jpg" alt="Milkbelly Instagram">
+            <div class="gallery-grid-wrapper">
+                <img src="vaquinha-bailarina.png" alt="Vaquinha bailarina" class="gallery-sticker sticker-top-left">
+                <img src="vaquinha joia.png" alt="Vaquinha joia" class="gallery-sticker sticker-bottom-right">
+                <div class="gallery-grid">
+                    <div class="gallery-item">
+                        <img src="feed/475846529_122109147314724665_3106343073095388622_n..jpg" alt="Milkbelly Instagram">
+                    </div>
+                    <div class="gallery-item">
+                        <img src="feed/475854743_122109149438724665_3463077709337101585_n..jpg" alt="Milkbelly Instagram">
+                    </div>
+                    <div class="gallery-item">
+                        <img src="feed/476119379_122109150566724665_8769602637004794637_n..jpg" alt="Milkbelly Instagram">
+                    </div>
+                    <div class="gallery-item">
+                        <img src="feed/519877814_17966771156928136_6517244355155860494_n..jpg" alt="Milkbelly Instagram">
+                    </div>
+                    <div class="gallery-item">
+                        <img src="feed/582854796_17979734162928136_8231244067935070203_n..jpg" alt="Milkbelly Instagram">
+                    </div>
+                    <div class="gallery-item">
+                        <img src="feed/626078724_17987904023928136_6526325265770516619_n..jpg" alt="Milkbelly Instagram">
+                    </div>
                 </div>
             </div>
             
