Move vaquinha-bailarina next to gallery section title
- Removed vaquinha-joia sticker
- Positioned vaquinha-bailarina beside the title

Co-authored-by: Ona <no-reply@ona.com>

--- a/index.html
+++ b/index.html
@@ -216,16 +216,16 @@
             </svg>
         </div>
         <div class="container">
-            <div class="section-header">
-                <p class="section-subtitle script">@milkbelly</p>
-                <h2 class="section-title">Nosso Feed</h2>
-                <p class="section-description">Acompanhe nossos momentos deliciosos no Instagram</p>
+            <div class="section-header gallery-header">
+                <img src="vaquinha-bailarina.png" alt="Vaquinha bailarina" class="gallery-title-sticker">
+                <div class="gallery-header-text">
+                    <p class="section-subtitle script">@milkbelly</p>
+                    <h2 class="section-title">Nosso Feed</h2>
+                    <p class="section-description">Acompanhe nossos momentos deliciosos no Instagram</p>
+                </div>
             </div>
             
-            <div class="gallery-grid-wrapper">
-                <img src="vaquinha-bailarina.png" alt="Vaquinha bailarina" class="gallery-sticker sticker-top-left">
-                <img src="vaquinha joia.png" alt="Vaquinha joia" class="gallery-sticker sticker-bottom-right">
-                <div class="gallery-grid">
+            <div class="gallery-grid">
                     <div class="gallery-item">
                         <img src="feed/475846529_122109147314724665_3106343073095388622_n..jpg" alt="Milkbelly Instagram">
                     </div>
@@ -242,8 +242,7 @@
                         <img src="feed/582854796_17979734162928136_8231244067935070203_n..jpg" alt="Milkbelly Instagram">
                     </div>
                     <div class="gallery-item">
-                        <img src="feed/626078724_17987904023928136_6526325265770516619_n..jpg" alt="Milkbelly Instagram">
-                    </div>
+                    <img src="feed/626078724_17987904023928136_6526325265770516619_n..jpg" alt="Milkbelly Instagram">
                 </div>
             </div>
             
